--- a/src/main/webapp/invoices.xhtml
+++ b/src/main/webapp/invoices.xhtml
@@ -53,8 +53,10 @@
 
 					<h:outputLabel for="invoice_date" value="Invoice date"></h:outputLabel>
 					<h:inputText id="invoice_date"
-						value="#{invoicesPageData.newInvoice.date}"></h:inputText>
-					<p:message for="invoice_date"/>
+						value="#{invoicesPageData.newInvoice.date}">
+						<f:convertDateTime pattern="yyyy-MM-dd" />
+					</h:inputText>
+					<p:message for="invoice_date" />
 				</h:panelGrid>
 
 			</p:panel>
