added getter and setter fir field id in invoice class

--- a/src/main/webapp/invoices.xhtml
+++ b/src/main/webapp/invoices.xhtml
@@ -10,7 +10,7 @@
 			<p:messages id="messages" showDetail="false" autoUpdate="true"
 				closable="true" />
 
-			<p:dataTable value="#{invoicesPageBean.invoiceList}" var="author">
+			<p:dataTable value="#{invoicesPageBean.invoiceList}" var="invoice">
 				<p:column headerText="Id">
 					<h:outputText value="#{invoice.id}" />
 				</p:column>
