--- a/src/main/webapp/invoices.xhtml
+++ b/src/main/webapp/invoices.xhtml
@@ -10,7 +10,7 @@
 			<p:messages id="messages" showDetail="false" autoUpdate="true"
 				closable="true" />
 
-			<p:dataTable value="#{invoicesPageBean.invoiceList}" var="author">
+			<p:dataTable value="#{invoicesPageBean.invoiceList}" var="invoice">
 				<p:column headerText="Id">
 					<h:outputText value="#{invoice.id}" />
 				</p:column>
@@ -34,7 +34,7 @@
 				<p:column headerText="">
 					<h:commandButton value="Delete"
 						action="#{invoicesPageBean.deleteSelected(invoice)}" />
-					<h:commandButton value="Add Book"
+					<h:commandButton value="Add Item"
 						action="#{invoicesPageBean.showAddItemPage(invoice)}" />
 				</p:column>
 			</p:dataTable>
