--- a/src/main/webapp/invoices.xhtml
+++ b/src/main/webapp/invoices.xhtml
@@ -11,9 +11,6 @@
 				closable="true" />
 
 			<p:dataTable value="#{invoicesPageBean.invoiceList}" var="invoice">
-				<p:column headerText="Id">
-					<h:outputText value="#{invoice.id}" />
-				</p:column>
 
 				<p:column headerText="Number">
 					<h:outputText value="#{invoice.number}" />
@@ -21,6 +18,18 @@
 
 				<p:column headerText="Date">
 					<h:outputText value="#{invoice.date}" />
+				</p:column>
+
+				<p:column headerText="Company">
+					<h:outputText value="#{invoice.company}" />
+				</p:column>
+
+				<p:column headerText="Recipient">
+					<h:outputText value="#{invoice.recipient}" />
+				</p:column>
+
+				<p:column headerText="Total price">
+					<h:outputText value="#{invoice.totalPrice}" />
 				</p:column>
 
 				<p:column headerText="Items">
@@ -31,9 +40,11 @@
 					</h:dataTable>
 				</p:column>
 
-				<p:column headerText="">
+				<p:column headerText="Options">
 					<h:commandButton value="Delete"
 						action="#{invoicesPageBean.deleteSelected(invoice)}" />
+					<h:commandButton value="View"
+						action="view.xhtml" />
 					<h:commandButton value="Add Item"
 						action="#{invoicesPageBean.showAddItemPage(invoice)}" />
 				</p:column>
@@ -57,6 +68,19 @@
 						<f:convertDateTime pattern="yyyy-MM-dd" />
 					</h:inputText>
 					<p:message for="invoice_date" />
+
+
+					<h:outputLabel for="company" value="Company"></h:outputLabel>
+					<h:inputText id="company"
+						value="#{invoicesPageData.newInvoice.company}">
+					</h:inputText>
+					<p:message for="company" />
+
+					<h:outputLabel for="recipient" value="Recipient"></h:outputLabel>
+					<h:inputText id="recipient"
+						value="#{invoicesPageData.newInvoice.recipient}">
+					</h:inputText>
+					<p:message for="recipient" />
 				</h:panelGrid>
 
 			</p:panel>
