--- a/src/main/webapp/invoices.xhtml
+++ b/src/main/webapp/invoices.xhtml
@@ -10,8 +10,8 @@
 			<p:messages id="messages" showDetail="false" autoUpdate="true"
 				closable="true" />
 
-			<p:dataTable value="#{invoicesPageBean.invoiceList}" var="invoice">
-
+			<p:dataTable value="#{invoicesPageBean.invoiceList}" var="invoice"
+				rowKey="invoice.id">
 				<p:column headerText="Number">
 					<h:outputText value="#{invoice.number}" />
 				</p:column>
@@ -43,8 +43,7 @@
 				<p:column headerText="Options">
 					<h:commandButton value="Delete"
 						action="#{invoicesPageBean.deleteSelected(invoice)}" />
-					<h:commandButton value="View"
-						action="view.xhtml" />
+					<h:commandButton value="View" action="#{invoicesPageBean.showViewPage(invoice)}" />
 					<h:commandButton value="Add Item"
 						action="#{invoicesPageBean.showAddItemPage(invoice)}" />
 				</p:column>
