--- a/src/main/webapp/sablonas.xhtml
+++ b/src/main/webapp/sablonas.xhtml
@@ -17,6 +17,8 @@
 			<p:tabMenu>
 				<p:menuitem value="Invoices" outcome="list-invoices">
 				</p:menuitem>
+				<p:menuitem value="Add new invoice" outcome="add-invoice">
+				</p:menuitem>
 			</p:tabMenu>
 		</h:form>
 		<div id="contents">
