--- a/src/main/webapp/addNewInvoice.xhtml
+++ b/src/main/webapp/addNewInvoice.xhtml
@@ -11,18 +11,18 @@
 				<h:panelGrid id="grid" columns="3" cellpadding="5">
 					<h:outputLabel for="invoice_number" value="Invoice number"></h:outputLabel>
 					<h:inputText id="invoice_number"
-						value="#{invoicesPageData.newInvoice.number}">
-						<f:validateBean />
+						value="#{invoicesPageData.newInvoice.number}" type="number"
+						required="true" requiredMessage="This field is required."
+						converterMessage="Lenght must be between 2 and 10 digits">
+						<f:validateLength minimum="1" maximum="10" /> 
 					</h:inputText>
 					<p:message for="invoice_number" />
 
 					<h:outputLabel for="invoice_date" value="Invoice date"></h:outputLabel>
-					<h:inputText id="invoice_date"
-						value="#{invoicesPageData.newInvoice.date}">
-						<f:convertDateTime pattern="yyyy-MM-dd" />
-					</h:inputText>
+					<p:calendar id="invoice_date" pattern="yyyy-mm-dd"
+						placeholder="2000-01-01"
+						value="#{invoicesPageData.newInvoice.date}" />
 					<p:message for="invoice_date" />
-
 
 					<h:outputLabel for="company" value="Company"></h:outputLabel>
 					<h:inputText id="company"
@@ -36,8 +36,8 @@
 					</h:inputText>
 					<p:message for="recipient" />
 				</h:panelGrid>
-				<h:commandButton action="#{invoicesPageBean.addNew}" value="Add new"
-					update="grid"></h:commandButton>
+				<p:commandButton action="#{invoicesPageBean.addNew}" value="Add new"
+					update="grid"></p:commandButton>
 			</p:panel>
 
 
