--- a/src/main/webapp/invoices.xhtml
+++ b/src/main/webapp/invoices.xhtml
@@ -6,7 +6,6 @@
 
 	<ui:define name="turinys">
 		<h:form>
-
 			<p:messages id="messages" showDetail="false" autoUpdate="true"
 				closable="true" />
 
@@ -31,22 +30,32 @@
 				</p:column>
 
 				<p:column headerText="View">
-					<h:commandButton value="View"
+					<p:commandButton value="View"
 						action="#{invoicesPageBean.showViewPage(invoice)}" />
-	
-					<h:commandButton value="Update"
+
+					<p:commandButton value="Update"
 						action="#{invoicesPageBean.invoiceToUpdate(invoice)}" />
 
 
 				</p:column>
 
 				<p:column headerText="Delete">
-					<h:commandButton value="Delete"
-						action="#{invoicesPageBean.deleteSelected(invoice)}" />
+					<p:commandButton value="Delete"
+						actionListener="#{invoicesPageBean.deleteSelected(invoice)}" update="@form">
+						<p:confirm header="Confirmation" message="Are you sure?"
+							icon="ui-icon-alert" />
+					</p:commandButton>
+					<p:commandButton value="Add Item"
+						action="#{invoicesPageBean.showAddItemPage(invoice)}" />
 				</p:column>
 			</p:dataTable>
-			
 
+			<p:confirmDialog global="true" showEffect="fade" hideEffect="fade">
+				<p:commandButton value="Yes" type="button"
+					styleClass="ui-confirmdialog-yes" icon="ui-icon-check" />
+				<p:commandButton value="No" type="button"
+					styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
+			</p:confirmDialog>
 
 
 		</h:form>
