--- a/src/main/webapp/view.xhtml
+++ b/src/main/webapp/view.xhtml
@@ -40,7 +40,7 @@
 					</h:outputText>
 
 
-					<h:commandButton value="Add Item"
+					<p:commandButton value="Add Item"
 						action="#{invoicesPageBean.showAddItemPage(invoicesPageBean.data.currentInvoice)}" />
 				</h:panelGrid>
 			</p:outputPanel>
